--- a/StorageSystem/Views/Dialog/WaitView.xaml
+++ b/StorageSystem/Views/Dialog/WaitView.xaml
@@ -10,7 +10,7 @@
     Width="400"
     Height="50"
     AllowsTransparency="True"
-    Background="Transparent"
+    Background="Aqua"
     WindowStartupLocation="CenterScreen"
     WindowStyle="None"
     mc:Ignorable="d">
