--- a/StorageSystem/Views/StorageInView.xaml
+++ b/StorageSystem/Views/StorageInView.xaml
@@ -1,12 +1,182 @@
-﻿<UserControl x:Class="StorageSystem.Views.StorageInView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:StorageSystem.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            <TextBlock Text="物料入仓" FontSize="50"/>
-    </Grid>
+﻿<UserControl
+    x:Class="StorageSystem.Views.StorageInView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:StorageSystem.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <UserControl.Resources>
+        <Style x:Key="TextStaticStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="50" />
+            <Setter Property="Foreground" Value="Red" />
+            <Setter Property="FontWeight" Value="Bold" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="FontFamily" Value="微软雅黑" />
+        </Style>
+    </UserControl.Resources>
+    <md:TransitioningContent OpeningEffect="{md:TransitionEffect Kind=SlideInFromLeft}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TextBlock
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                FontSize="100"
+                Foreground="Purple"
+                Text="入库" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox
+                            Width="300"
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            md:HintAssist.Hint="物料号查询..."
+                            FontSize="50"
+                            Text="{Binding Sn}" />
+                        <Button
+                            Height="50"
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            Command="{Binding ExecuteCommand}"
+                            CommandParameter="入库查询"
+                            Content="查询" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Style="{StaticResource TextStaticStyle}" Text="仓位：" />
+                        <TextBlock
+                            Margin="10,0,10,0"
+                            Style="{StaticResource TextStaticStyle}"
+                            Text="{Binding StorageDetail.StorageName}" />
+                    </StackPanel>
+                    <TextBlock
+                        FontSize="25"
+                        Style="{StaticResource TextStaticStyle}"
+                        Text="{Binding StorageDetail.MaterielDetail}"
+                        TextWrapping="WrapWithOverflow" />
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Button
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            Command="{Binding ExecuteCommand}"
+                            CommandParameter="入库"
+                            Content="入库" />
+                        <Button
+                            Grid.Column="1"
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            Command="{Binding ExecuteCommand}"
+                            CommandParameter="批量入库"
+                            Content="批量入库" />
+                    </Grid>
+                </StackPanel>
+                <ListView
+                    Grid.Row="1"
+                    ItemsSource="{Binding StorageDetails}"
+                    ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn DisplayMemberBinding="{Binding InstorageDate}" Header="导入日期" />
+                            <GridViewColumn DisplayMemberBinding="{Binding StorageName}" Header="仓位编号" />
+                            <GridViewColumn DisplayMemberBinding="{Binding WbsNo}" Header="WBS号" />
+                            <GridViewColumn DisplayMemberBinding="{Binding MaterielSN}" Header="物料编号" />
+                            <GridViewColumn DisplayMemberBinding="{Binding MaterielDetail}" Header="物料描述" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Grid>
+            <TextBlock
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Top"
+                FontSize="100"
+                Foreground="Purple"
+                Text="出库" />
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBox
+                            Width="300"
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            md:HintAssist.Hint="物料号查询..."
+                            FontSize="50"
+                            Text="{Binding OutSn}" />
+                        <Button
+                            Height="50"
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            Command="{Binding ExecuteCommand}"
+                            CommandParameter="出库查询"
+                            Content="查询" />
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Style="{StaticResource TextStaticStyle}" Text="仓位：" />
+                        <TextBlock
+                            Margin="10,0,10,0"
+                            Style="{StaticResource TextStaticStyle}"
+                            Text="{Binding StorageOutDetail.StorageName}" />
+                    </StackPanel>
+                    <TextBlock
+                        FontSize="25"
+                        Style="{StaticResource TextStaticStyle}"
+                        Text="{Binding StorageOutDetail.MaterielDetail}"
+                        TextWrapping="WrapWithOverflow" />
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <Button
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            Command="{Binding ExecuteCommand}"
+                            CommandParameter="出库"
+                            Content="出库" />
+                        <Button
+                            Grid.Column="1"
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            Command="{Binding ExecuteCommand}"
+                            CommandParameter="批量出库"
+                            Content="批量出库" />
+                    </Grid>
+                </StackPanel>
+                <ListView
+                    Grid.Row="1"
+                    ItemsSource="{Binding StorageOutDetails}"
+                    ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn DisplayMemberBinding="{Binding InstorageDate}" Header="入库日期" />
+                            <GridViewColumn DisplayMemberBinding="{Binding OutStorageDate}" Header="出库日期" />
+                            <GridViewColumn DisplayMemberBinding="{Binding StorageName}" Header="仓位编号" />
+                            <GridViewColumn DisplayMemberBinding="{Binding WbsNo}" Header="WBS号" />
+                            <GridViewColumn DisplayMemberBinding="{Binding MaterielSN}" Header="物料编号" />
+                            <GridViewColumn DisplayMemberBinding="{Binding MaterielDetail}" Header="物料描述" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </Grid>
+        </Grid>
+    </md:TransitioningContent>
 </UserControl>
